@@ -11,13 +11,15 @@ class CategoryView(BrowserView):
 
     template = ViewPageTemplateFile("category.pt")
 
+    def __init__(self, context, request):
+        super(CategoryView, self).__init__(context, request)
+        self.time = DateTime()
+
     def __call__(self):
         mtool = getToolByName(self.context, 'portal_membership')
         member = mtool.getAuthenticatedMember()
         if not member.has_permission('Modify portal content', self.context):
             self.request.set('disable_border', 1)
-
-        self.time = DateTime()
 
         return self.template()
 
